[gd_scene load_steps=10 format=3 uid="uid://cebs8u3h3h054"]

[ext_resource type="Script" uid="uid://gltekkusuw53" path="res://scripts/ui/hud_paradise.gd" id="1_fathq"]
[ext_resource type="Script" uid="uid://bwd70mknhows4" path="res://scripts/managers/GoldManagerParadise.gd" id="2_k0442"]
[ext_resource type="Texture2D" uid="uid://cmn0ypwtv56u3" path="res://assets/sprites/ui/bars/progress_bar_gold.png" id="3_pktxi"]
[ext_resource type="Texture2D" uid="uid://b2d0m73k5cdg5" path="res://assets/sprites/ui/bars/progress_bar_gold_background.png" id="4_haoln"]
[ext_resource type="Texture2D" uid="uid://c6d5ghyskatu4" path="res://assets/sprites/ui/cards/paradise/ange.png" id="5_7fr2o"]
[ext_resource type="Texture2D" uid="uid://uctorpatojs0" path="res://assets/sprites/ui/cards/paradise/seraphin.jpg" id="6_7lo1c"]
[ext_resource type="Texture2D" uid="uid://culbllv32ifhf" path="res://assets/sprites/ui/cards/paradise/archange.png" id="7_tv32i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1xsix"]
texture = ExtResource("3_pktxi")
expand_margin_left = 20.0
expand_margin_top = 40.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rftc2"]
texture = ExtResource("4_haoln")
expand_margin_top = 40.0

[node name="HUD" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_right = 0.629
anchor_bottom = 0.202
offset_right = -148.608
offset_bottom = -130.896
grow_horizontal = 2
script = ExtResource("1_fathq")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 406.464
offset_top = 807.368
offset_right = 892.464
offset_bottom = 1020.37
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false

[node name="GoldManager" type="Node" parent="VBoxContainer2"]
unique_name_in_owner = true
script = ExtResource("2_k0442")

[node name="GoldBar" type="ProgressBar" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxTexture_1xsix")
theme_override_styles/fill = SubResource("StyleBoxTexture_rftc2")
max_value = 10.0
step = 0.0
value = 10.0
show_percentage = false

[node name="GoldLabel" type="Label" parent="VBoxContainer2/GoldBar"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 159.0
offset_top = -37.0
offset_right = 388.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "GOLD : "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
localize_numeral_system = false

[node name="BtnCost5" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/icon = ExtResource("5_7fr2o")

[node name="BtnCost10" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/icon = ExtResource("6_7lo1c")
text = "
"

[node name="BtnCost15" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/icon = ExtResource("7_tv32i")
